Prepare user interface labels and messages for ZS implementation

--- a/src/app/views/transactions/main-page/transactions-main-page.component.html
+++ b/src/app/views/transactions/main-page/transactions-main-page.component.html
@@ -41,7 +41,7 @@
 
 
 <emp-ng-modal-window *ngIf="displayOptionModalSelected"
-                     [config]="{width:'820px'}">
+                     [config]="{width:'920px', maxHeight:'900px'}">
 
   <ng-container [ngSwitch]="displayOptionModalSelected">
 
