--- a/src/app/views/transactions/transaction-list/transaction-list.component.html
+++ b/src/app/views/transactions/transaction-list/transaction-list.component.html
@@ -2,13 +2,13 @@
 
   <div class="card-header card-header-flat">
 
-    <!-- <div *ngIf="transactionList.length > 0"
-      style="margin: auto; padding: 0 20px 0 4px;">
+    <div *ngIf="transactionList.length > 0"
+         style="margin: auto; padding: 0 20px 0 4px;">
       <emp-ng-check-box-all
         [(selection)]="selection"
         [values]="transactionList">
       </emp-ng-check-box-all>
-    </div> -->
+    </div>
 
     <div class="card-title">
       {{title}}
@@ -60,7 +60,7 @@
           class="list-item" [class.list-item-selected]="isSelected(transaction)"
           matRipple [matRippleTrigger]="trigger" matRippleColor="rgb(44, 57, 66, 0.05)">
 
-      <!-- <div class="list-item-checkbox">
+      <div class="list-item-checkbox">
         <mat-checkbox
           [checked]="selection.isSelected(transaction)"
           (click)="$event.stopPropagation()"
@@ -68,7 +68,7 @@
                     selection.deselect(transaction) :
                     selection.select(transaction)">
         </mat-checkbox>
-      </div> -->
+      </div>
 
       <div class="list-item-container">
 
