--- a/src/app/views/land-controls/real-property-uid-picker/real-property-uid-picker.component.html
+++ b/src/app/views/land-controls/real-property-uid-picker/real-property-uid-picker.component.html
@@ -1,52 +1,80 @@
 <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
 
-<table class="form-section" [empNgSpinnerHost]="spinner" [formGroup]="form">
-  <tr>
-    <td>Folio real:</td>
-    <td>
-      <input type="text" class="text-box uppercase" style="width:170px" maxlength="19"
-             [class.invalid-control]="isDirty && errorMsg"
-             formControlName="propertyUID">
-      <button type="button" *ngIf="!disabled" [class.btn]="!isDirty" [class.btn-action]="isDirty"
-              (click)="onReadRealEstateData()">Leer</button>
-      <div *ngIf="errorMsg" class='warning-text'>{{errorMsg}}</div>
-    </td>
-    <td>Clave catastral:</td>
-    <td>
-      <input type="text" class="text-box" maxlength="31" disabled
-             [value]="realEstate.cadastralKey">
-    </td>
-  </tr>
-  <tr>
-    <td>Distrito:</td>
-    <td>
-      <input type="text" class="text-box" style="width:170px" disabled [value]="realEstate.district.name">
-    </td>
-    <td>Municipio:</td>
-    <td>
-      <input type="text" class="text-box" disabled [value]="realEstate.municipality.name">
-    </td>
-  </tr>
-  <tr>
-    <td>Tipo de predio:</td>
-    <td>
-      <input type="text" class="text-box" style="width:170px" disabled [value]="realEstate.realEstateType.name">
-    </td>
-    <td>Denominado:</td>
-    <td>
-      <input type="text" class="text-box" disabled [value]="realEstate.name">
-    </td>
-  </tr>
-  <tr>
-    <td class="align-top">Ubicado en:</td>
-    <td colspan="3">
-      <textarea class="text-area" rows="2" disabled [value]="realEstate.location"></textarea>
-    </td>
-  </tr>
-  <tr>
-    <td class="align-top">Medidas y<br>colindancias:</td>
-    <td colspan="3">
-      <textarea class="text-area" rows="3" disabled [value]="realEstate.metesAndBounds"></textarea>
-    </td>
-  </tr>
-</table>
+<form [formGroup]="form" autocomplete="off" class="form-section" [empNgSpinnerHost]="spinner">
+
+  <div fxLayout="column" fxLayout.lt-md="column" fxLayoutGap="0.75rem" fxLayoutGap.lt-md="0">
+
+    <div fxLayout="row" fxLayout.lt-md="column">
+
+      <div fxFlex="50">
+        <label>Folio real:</label>
+        <div fxLayout="row">
+          <input type="text" class="text-box uppercase" maxlength="19" [class.invalid-control]="isDirty && errorMsg"
+            formControlName="propertyUID" fxFlex>
+          <button type="button" *ngIf="!disabled" [class.btn]="!isDirty" [class.btn-action]="isDirty"
+            (click)="onReadRealEstateData()" fxFlex="30" [style.marginTop.px]="2">Leer</button>
+        </div>
+        <div *ngIf="errorMsg" class='warning-text'>{{errorMsg}}</div>
+      </div>
+
+      <div fxFlex="50">
+        <label>Clave catastral:</label>
+        <input type="text" class="text-box" maxlength="31" disabled [value]="realEstate.cadastralKey">
+      </div>
+
+    </div>
+
+    <div fxLayout="row" fxLayout.lt-md="column">
+
+      <div fxFlex="50">
+        <label>Distrito:</label>
+        <input type="text" class="text-box" disabled [value]="realEstate.district.name">
+      </div>
+
+      <div fxFlex="50">
+        <label>Municipio:</label>
+        <input type="text" class="text-box" disabled [value]="realEstate.municipality.name">
+      </div>
+
+    </div>
+
+    <div fxLayout="row" fxLayout.lt-md="column">
+
+      <div fxFlex="50">
+        <label>Tipo de predio:</label>
+        <input type="text" class="text-box" disabled [value]="realEstate.realEstateType.name">
+      </div>
+
+      <div fxFlex="50">
+        <label>Denominado:</label>
+        <input type="text" class="text-box" disabled [value]="realEstate.name">
+      </div>
+
+    </div>
+
+
+    <div fxLayout="row" fxLayout.lt-md="column">
+
+      <div fxFlex="100">
+        <label>Ubicado en:</label>
+        <textarea empNgTextareaAutoresize rows="1" class="text-area" disabled [value]="realEstate.location">
+
+        </textarea>
+      </div>
+
+    </div>
+
+    <div fxLayout="row" fxLayout.lt-md="column">
+
+      <div fxFlex="100">
+        <label>Medidas y colindancias:</label>
+        <textarea empNgTextareaAutoresize rows="1" class="text-area" disabled [value]="realEstate.metesAndBounds">
+
+        </textarea>
+      </div>
+
+    </div>
+
+  </div>
+
+</form>
