physical-recording module now is part of the registration module

--- a/src/app/views/registration/recording-act-creator/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-act-creator/recording-act-creator.component.html
@@ -28,7 +28,7 @@
       <div fxFlex="150px" fxLayoutAlign="end end" style="padding-bottom: 2px;">
         <button type="submit" (click)="submitRecordingAct()" [class.btn]="!formHandler.isValid"
           [class.btn-action]="formHandler.isValid" [style.width.px]="150">
-          Agregar el acto
+          Registrar el acto
         </button>
       </div>
 
