--- a/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
+++ b/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
@@ -48,11 +48,11 @@
   <div *ngIf="displayRecordingActEditor"
     class="secondary">
 
-    <emp-land-real-estate-tabbed-view
-      [recording]="selectedRecordingAct"
+    <emp-land-recordable-subject-tabbed-view
+      [recordingAct]="selectedRecordingAct"
       (closeEvent)="onCloseRecordingActEditor()">
 
-    </emp-land-real-estate-tabbed-view>
+    </emp-land-recordable-subject-tabbed-view>
 
   </div>
 
