--- a/src/app/views/registration/recordable-subject-tabbed-view/recordable-subject-tabbed-view.component.html
+++ b/src/app/views/registration/recordable-subject-tabbed-view/recordable-subject-tabbed-view.component.html
@@ -8,7 +8,9 @@
 
     <mat-tab label="Datos del predio">
 
-      <emp-land-real-estate-editor [realEstate]="recording">
+      <emp-land-real-estate-editor
+        [electronicID]="recordingAct.property.electronicID"
+        [readonly]="false">
 
       </emp-land-real-estate-editor>
 
