--- a/src/app/views/registration/recording-acts-list/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts-list/recording-acts-list.component.html
@@ -1,27 +1,28 @@
 <div class="section-title">Actos jurídicos contenidos en el documento</div>
 
-<div class="tab-container">
+<div class="tab-container scrollable-container">
+
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
 
     <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef> # </th>
       <td mat-cell *matCellDef="let row; let i = index;"> <strong>{{i + 1}}</strong> </td>
     </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Acto jurídico </th>
+      <td mat-cell *matCellDef="let row"> {{ row.name }} </td>
+    </ng-container>
     <ng-container matColumnDef="electronicID">
       <th mat-header-cell *matHeaderCellDef> Folio electrónico </th>
       <td mat-cell *matCellDef="let row">
         <a class="link" (click)="onOpenRecordingActEditor(row)">
-          {{ row.electronicID }}
+          {{ row.property.electronicID }}
         </a>
       </td>
     </ng-container>
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef> Tipo </th>
-      <td mat-cell *matCellDef="let row"> {{ row.type }} </td>
-    </ng-container>
-    <ng-container matColumnDef="kind">
-      <th mat-header-cell *matHeaderCellDef> Acto jurídico </th>
-      <td mat-cell *matCellDef="let row"> {{ row.kind }} </td>
+      <td mat-cell *matCellDef="let row"> {{ row.type.name }} </td>
     </ng-container>
     <ng-container matColumnDef="notes">
       <th mat-header-cell *matHeaderCellDef> Antecedente </th>
@@ -39,7 +40,7 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
