Rfx Transaction.recorderOffice changed to filingOffice

--- a/src/app/views/transactions/transaction-editor/transaction-editor.component.html
+++ b/src/app/views/transactions/transaction-editor/transaction-editor.component.html
@@ -2,7 +2,7 @@
   [transaction]="transaction"
   [transactionTypeList]="transactionTypeList"
   [agencyList]="agencyList"
-  [recorderOfficeList]="recorderOfficeList"
+  [filingOfficeList]="filingOfficeList"
   (transactionHeadertEvent)="onTransactionHeaderEvent($event)">
 
 </emp-land-transaction-header>
