--- a/src/app/views/transactions/transaction-header/transaction-header.component.html
+++ b/src/app/views/transactions/transaction-header/transaction-header.component.html
@@ -62,10 +62,10 @@
       </div>
       <div [fxFlex]="100/3">
         <label>Distrito:</label>
-        <emp-ng-select formControlName="recorderOffice"
+        <emp-ng-select formControlName="filingOffice"
           [config]="{ clearable: false }"
-          [items]="recorderOfficeList"
-          [showError]="getFormControl('recorderOffice').touched && getFormControl('recorderOffice').invalid">
+          [items]="filingOfficeList"
+          [showError]="getFormControl('filingOffice').touched && getFormControl('filingOffice').invalid">
         </emp-ng-select>
       </div>
     </div>
