--- a/src/app/views/transactions/transaction-creator/transaction-creator.component.html
+++ b/src/app/views/transactions/transaction-creator/transaction-creator.component.html
@@ -8,7 +8,7 @@
       [transaction]="transaction"
       [transactionTypeList]="transactionTypeList"
       [agencyList]="agencyList"
-      [recorderOfficeList]="recorderOfficeList"
+      [filingOfficeList]="filingOfficeList"
       (transactionHeadertEvent)="onTransactionHeaderEvent($event)">
 
     </emp-land-transaction-header>
