--- a/src/app/views/registration/recording-books/book-entry-creator.component.html
+++ b/src/app/views/registration/recording-books/book-entry-creator.component.html
@@ -24,7 +24,7 @@
       <div fxFlex fxLayoutAlign="end end" style="padding-bottom: 2px;">
 
         <button type="submit"
-          (click)="submitPhysicalRecording()"
+          (click)="createBookEntry()"
           [class.btn]="!formHandler.isValid"
           [class.btn-action]="formHandler.isValid">
           Registrar
