--- a/src/app/views/registration/main-page/registration-main-page.component.html
+++ b/src/app/views/registration/main-page/registration-main-page.component.html
@@ -1,28 +1,22 @@
 <emp-land-instrument-editor
-  [transactionUID]="transactionUID"
-  [instrument]="instrument">
-
+  [instrument]="instrumentRecording.instrument"
+  [actions]="actions"
+  (instrumentEditorEvent)="onInstrumentEditorEvent($event)">
 </emp-land-instrument-editor>
 
-<ng-container *ngIf="instrument.actions.show.physicalRecordings">
+<ng-container *ngIf="actions.show.recordingBookEntries">
   <br>
   <emp-land-book-entries-list
-    [transactionUID]="transactionUID"
-    [instrumentUID]="instrument.uid"
-    [bookEntries]="instrument.registration.bookEntries"
-    [showRegistrationStamps]="instrument.actions.show.registrationStamps"
-    [canDelete]="instrument.actions.can.deletePhysicalRecordings">
-
+    [instrumentRecording]="instrumentRecording">
   </emp-land-book-entries-list>
 
-  <emp-ng-expansion-button *ngIf="instrument.actions.can.createPhysicalRecordings"
+  <emp-ng-expansion-button *ngIf="actions.can.createNextRecordingBookEntries"
     [(panelState)]="panelAddState"
     [config]="{textButtonOpen: 'Agregar registro del documento en libros',
                textButtonClose: 'Cancelar agregar registro'}">
 
     <emp-land-book-entry-creator *ngIf="panelAddState"
-      [transactionUID]="transactionUID"
-      [instrumentUID]="instrument.uid">
+      [instrumentRecordingUID]="instrumentRecording.uid">
 
     </emp-land-book-entry-creator>
 
@@ -34,7 +28,7 @@
 <ng-container *ngIf="false">
 
   <emp-land-recording-acts-list
-    [instrumentUID]="instrument.uid"
+    [instrumentUID]="instrumentRecording.instrument.uid"
     [recordingActs]="[]"
     [canDelete]="true">
 
@@ -46,10 +40,15 @@
                textButtonClose: 'Cancelar agregar registro'}">
 
     <emp-land-recording-act-creator *ngIf="panelAddState"
-      [instrumentUID]="instrument.uid">
+      [instrumentUID]="instrumentRecording.instrument.uid">
 
     </emp-land-recording-act-creator>
 
   </emp-ng-expansion-button>
 
 </ng-container>
+
+<emp-ng-file-print-preview #filePrintPreview
+  title="Impresión de sello interesado"
+  [hint]="instrumentRecording.instrument.typeName">
+</emp-ng-file-print-preview>
