--- a/src/app/views/registration/recording-acts-list/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts-list/recording-acts-list.component.html
@@ -16,24 +16,24 @@
       <th mat-header-cell *matHeaderCellDef> Folio electrónico </th>
       <td mat-cell *matCellDef="let row">
         <a class="link" (click)="onOpenRecordingActEditor(row)">
-          {{ row.property.electronicID }}
+          {{ row.recordableSubject.electronicID }}
         </a>
       </td>
     </ng-container>
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef> Tipo </th>
-      <td mat-cell *matCellDef="let row"> {{ row.type.name }} </td>
+      <td mat-cell *matCellDef="let row"> {{ row.recordableSubject.kind }} </td>
     </ng-container>
     <ng-container matColumnDef="notes">
       <th mat-header-cell *matHeaderCellDef> Antecedente </th>
-      <td mat-cell *matCellDef="let row"> {{ row.notes }} </td>
+      <td mat-cell *matCellDef="let row"> {{ row.antecedent }} </td>
     </ng-container>
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let row" class="text-align-center padding-icon">
         <mat-icon
-          (click)="removeRecordingActs(row)"
+          (click)="removeRecordingAct(row)"
           title="Remover este acto">
           delete
         </mat-icon>
