Minimal UI changes

--- a/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
+++ b/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
@@ -75,7 +75,7 @@
         </emp-ng-select>
       </div>
 
-      <div fxFlex="175px">
+      <div fxFlex>
         <label>Superficie total:</label>
         <input type="number" class="text-box" [formControlName]="controls.lotSize"
           [class.invalid-control]="formHandler.showInvalidControl(controls.lotSize)">
