--- a/src/app/views/registration/recording-act-creator/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-act-creator/recording-act-creator.component.html
@@ -96,7 +96,7 @@
 
     </div>
 
-    <div fxLayout="row" *ngIf="showPartitionField">
+    <div fxLayout="row" *ngIf="showRealEstateField">
 
       <div fxFlex="270px">
 
@@ -133,8 +133,8 @@
         <div fxLayout="row">
           <emp-ng-select [config]="{ clearable: false }" [items]="[]" fxFlex [formControlName]="controls.subjectCommand">
           </emp-ng-select>
-          <button type="button" class="btn" fxFlex="50px" [style.marginTop.px]="2">
-            Ver
+          <button type="button" class="btn" fxFlex="70px" [style.marginTop.px]="2">
+            Editar
           </button>
         </div>
 
@@ -146,8 +146,8 @@
         <div fxLayout="row">
           <emp-ng-select [config]="{ clearable: false }" [items]="[]" fxFlex [formControlName]="controls.subjectCommand">
           </emp-ng-select>
-          <button type="button" class="btn" fxFlex="50px" [style.marginTop.px]="2">
-            Ver
+          <button type="button" class="btn" fxFlex="70px" [style.marginTop.px]="2">
+            Editar
           </button>
         </div>
 
