Feat: dropdownPosition added to select-box config

--- a/src/app/shared/form-controls/select-box/select-box.component.html
+++ b/src/app/shared/form-controls/select-box/select-box.component.html
@@ -12,6 +12,7 @@
   [bindValue]="bindValue"
   [clearable]="selectBoxConfig.clearable"
   [closeOnSelect]="selectBoxConfig.closeOnSelect"
+  [dropdownPosition]="selectBoxConfig.dropdownPosition"
   [groupBy]="selectBoxConfig.groupBy"
   [hideSelected]="selectBoxConfig.hideSelected"
   [minTermLength]="selectBoxConfig.minTermLength"
